DEX-28018 | fix: prevent component from overlapping the next section

--- a/_src-lp/blocks/b-dropdownbox/b-dropdownbox.scss
+++ b/_src-lp/blocks/b-dropdownbox/b-dropdownbox.scss
@@ -347,7 +347,7 @@
 
 .b-dropdownbox-container.dropdownSlider {
   position: relative;
-  margin-bottom: 2em;
+  margin-bottom: 7em;
 
   &::after {
     content: "";
@@ -467,17 +467,21 @@
     clear: both;
     padding: 0 15px 5px;
 
-    &.dropdownSlider:not(.no-loader) {
-      .b-dropdownbox-wrapper {
-        display: block;
+    &.dropdownSlider {
+      margin-bottom: 2em;
+      
+      &:not(.no-loader) {
+        .b-dropdownbox-wrapper {
+          display: block;
 
-        img {
-          width: 90%;
+          img {
+            width: 90%;
+          }
         }
-      }
 
-      .slider_box {
-        display: none;
+        .slider_box {
+          display: none;
+        }
       }
     }
   }
